added JDK17 JVM settings for CLI ITs